--- a/littleLeaders/styles.css
+++ b/littleLeaders/styles.css
@@ -1,8 +1,18 @@
 @import url('http://fonts.cdnfonts.com/css/serious-rounded');
 
 body {
-    background-color: rgb(255, 224, 141);
+    background-color: rgb(255, 227, 186);
 }
+
+/* .cover {
+  background-color: rgb(255, 227, 186);
+  color:  rgb(255, 227, 186);
+  display: block;
+  position: absolute;
+  width: 99%;
+  height: 95%;
+  z-index: 10;
+} */
 
 .heading-main {
     margin: 25px;
@@ -43,19 +53,15 @@ body {
   to   { transform: translate(0, -0px); }    
 }
 
-.container {  
-  display: grid;
-
+.l1 {
+  margin-top: 10%;
+  margin-left: 25%;
 }
-
-.main-content {
-
-}
-
   
 .l2 {
-  margin-left: 850px;
+  margin-left: 50%;
   margin-top: -325px;
+
 }
 
 
@@ -64,6 +70,7 @@ body {
   margin-left: 200px;
   width: 200px;
   z-index: 5;
+  
 }
 .leader-1-torso {
   position: relative;
@@ -76,6 +83,7 @@ body {
   width: 100px;
   margin-left: -310px;
   top: 50px;
+  transition-duration: .2s;
 }
 .leader-1-rarm {
   position: relative;
@@ -83,6 +91,7 @@ body {
   margin-left: 170px;
   top: 50px;
   transform: rotate(-45deg);
+  transition-duration: .2s;
 }
 .leader-1-lleg {
   position: relative;
@@ -90,6 +99,7 @@ body {
   margin-left: -175px;
   top: 250px;
   transform: rotate(-30deg);
+  transition-duration: .2s;
 }
 .leader-1-rleg {
   position: relative;
@@ -97,6 +107,7 @@ body {
   margin-left: -250px;
   top: 250px;
   transform: rotate(-10deg);
+  transition-duration: .2s;
 }
 
 
@@ -118,12 +129,14 @@ body {
   width: 50px;
   margin-left: -250px;
   top: 50px;
+  transition-duration: .2s;
 }
 .leader-2-rarm {
   position: relative;
   width: 50px;
   margin-left: 140px;
   top: 50px;
+  transition-duration: .2s;
 }
 .leader-2-lleg {
   position: relative;
@@ -131,10 +144,91 @@ body {
   margin-left: -70px;
   top: 225px;
   transform: rotate(10deg);
+  transition-duration: .2s;
 }
 .leader-2-rleg {
   position: relative;
   width: 50px;
   margin-left: -220px;
   top: 225px;
+  transition-duration: .2s;
+}
+
+a {
+	position: relative;
+    color: rgba(255,255,255,1);
+    text-decoration: none;
+    background-color: rgb(219, 5, 5);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    font-size: 25px;
+    display: block;
+    padding: 4px;
+    border-radius: 8px;
+    box-shadow: 0px 9px 0px rgb(144, 17, 0), 0px 9px 25px rgba(0,0,0,.7);
+    margin: 50px auto;
+	width: 160px;
+	text-align: center;
+	transition: all .1s ease;
+}
+
+a:active {
+    box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+    position: relative;
+    top: 6px;
+}
+
+.container-key-1 {
+  position: absolute;
+  top: 75%;
+  left: 33%;
+  z-index: 10;
+}
+
+.container-key-2 {
+  position: absolute;
+  top: 75%;
+  left: 58.3%;
+  z-index: 10;
+}
+
+#key1 {
+    position: relative;
+    display: block;
+}
+
+#key2 {
+    position: relative;
+    display: block;
+
+}
+
+#charConfirm {
+  position: relative;
+  top: 500px;
+  left: 48%;
+}
+
+#statsNarc {
+  position: relative;
+  top: 500px;
+  left: 48%;
+}
+
+#statsInsec {
+  position: relative;
+  top: 500px;
+  left: 48%;
+}
+
+#statsControv {
+  position: relative;
+  top: 500px;
+  left: 48%;
+}
+
+#statsIntox {
+  position: relative;
+  top: 500px;
+  left: 48%;
 }
