--- a/littleLeaders/styles.css
+++ b/littleLeaders/styles.css
@@ -24,6 +24,8 @@ body {
     color: white;
     text-shadow: 5px 5px 2px rgba(63, 63, 63, 0.832);
     transition-duration: .2s;
+    border: solid;
+
 }
 
 .heading-main:hover {
@@ -180,6 +182,89 @@ body {
     cursor: pointer;
 }
 
+.buttonElon1 {
+	position: relative;
+    color: rgba(255,255,255,1);
+    text-decoration: none;
+    background-color: rgb(219, 5, 5);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    font-size: 25px;
+    display: block;
+    padding: 4px;
+    border-radius: 8px;
+    box-shadow: 0px 9px 0px rgb(144, 17, 0), 0px 9px 25px rgba(0,0,0,.7);
+    left: 1500px;
+    top: 500px;
+	width: 160px;
+	text-align: center;
+	transition: all .1s ease;
+  cursor: pointer;
+}
+
+.buttonElon1:active {
+    box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+    position: relative;
+    top: 6px;
+    cursor: pointer;
+}
+
+.buttonElon2 {
+	position: relative;
+    color: rgba(255,255,255,1);
+    text-decoration: none;
+    background-color: rgb(219, 5, 5);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    font-size: 25px;
+    display: block;
+    padding: 4px;
+    border-radius: 8px;
+    box-shadow: 0px 9px 0px rgb(144, 17, 0), 0px 9px 25px rgba(0,0,0,.7);
+    left: 1750px;
+    top: 460px;
+	width: 160px;
+	text-align: center;
+	transition: all .1s ease;
+  cursor: pointer;
+}
+
+.buttonElon2:active {
+    box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+    position: relative;
+    top: 6px;
+    cursor: pointer;
+}
+
+.buttonElon3 {
+	position: relative;
+    color: rgba(255,255,255,1);
+    text-decoration: none;
+    background-color: rgb(219, 5, 5);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    font-size: 25px;
+    display: block;
+    padding: 4px;
+    border-radius: 8px;
+    box-shadow: 0px 9px 0px rgb(144, 17, 0), 0px 9px 25px rgba(0,0,0,.7);
+    left: 2000px;
+    top: 420px;
+	width: 160px;
+	text-align: center;
+	transition: all .1s ease;
+  cursor: pointer;
+}
+
+.buttonElon3:active {
+    box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+    position: relative;
+    top: 6px;
+    cursor: pointer;
+}
+
+
+
 .container-key-1 {
   position: absolute;
   top: 75%;
@@ -216,6 +301,8 @@ body {
   top: 500px;
   left: 48%;
   margin-right: 50%;
+  border: solid;
+
 }
 
 #statsInsec {
@@ -223,6 +310,8 @@ body {
   top: 500px;
   left: 48%;
   margin-right: 50%;
+  border: solid;
+
 }
 
 #statsControv {
@@ -230,6 +319,8 @@ body {
   top: 500px;
   left: 48%;
   margin-right: 50%;
+  border: solid;
+
 }
 
 #statsIntox {
@@ -237,6 +328,8 @@ body {
   top: 500px;
   left: 48%;
   margin-right: 50%;
+  border: solid;
+
 }
 
 #chosenChar {
@@ -249,6 +342,6 @@ body {
 
 .stats-container {
   border: solid;
-  margin-top: -14%;
+  margin-top: -10%;
   padding: 10px;
 }
