--- a/littleLeaders/styles.css
+++ b/littleLeaders/styles.css
@@ -1,140 +1,143 @@
 @import url('http://fonts.cdnfonts.com/css/serious-rounded');
-
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Press+Start+2P&display=swap');
 body {
-    background-color: rgb(255, 224, 141);
+    background-color: rgb(255, 204, 65);
 }
 
-.heading-main {
-    margin: 25px;
-    text-align: center;
-    font-family: 'seriousr2b', sans-serif;
-    font-size: 48px;
-    word-spacing: 0;
-    letter-spacing: -3px;
-    color: white;
-    text-shadow: 5px 5px 2px rgba(63, 63, 63, 0.832);
-    transition-duration: .2s;
+h1 {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 40px;
+  color: white;
+  text-shadow: 2px 2px #ff0000;
 }
 
-.heading-main:hover {
-    margin: 23.8px;
-    text-align: center;
-    font-family: 'seriousr2b', sans-serif;
-    font-size: 50px;
-    word-spacing: -2px;
-    letter-spacing: -1px;
-    color: white;
-    text-shadow: 7px 7px 2px rgba(63, 63, 63, 0.832);
-    transition-duration: .2s;
+h2 {
+  font-family: 'Press Start 2P', cursive;
+  color: white;
+  text-shadow: 2px 2px #ff0000;
 }
 
-.floating {  
-  animation-name: floating;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-  margin-left: 30px;
-  margin-top: 5px;
+/*////////////////////////////////////////////  Buttons /////////////////////////////////////////////////*/
+
+#navWrap{
+  width:40vh;
+  height: 15vh;
+  background-color: brown;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-@keyframes floating {
-  from { transform: translate(0,  0px); }
-  65%  { transform: translate(0, 15px); }
-  to   { transform: translate(0, -0px); }    
+#buttonWrap{
+  display: flex;
+flex-direction: row;
 }
 
-.container {  
-  display: grid;
-
+.feedButton{
+  width: 5vh;
+  height: 5vh;
+  background-color: blue;
+  margin: .5vh;
+  list-style: none;
 }
 
-.main-content {
-
+.feedButton:hover{
+  width: 5.5vh;
+  height: 5.5vh;
+  background-color: blue;
+  margin: .5vh;
 }
 
-  
-.l2 {
-  margin-left: 850px;
-  margin-top: -325px;
+/*///////////////////////////////////////////// Character Screen Styling ////////////////////////////////*/
+
+nav h1{
+  text-align: center;
 }
 
 
-.leader-1-head {
-  position: absolute;
-  margin-left: 200px;
-  width: 200px;
-  z-index: 5;
+#container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
-.leader-1-torso {
-  position: relative;
-  margin-left: 165px;
-  top: 150px;
-  width: 250px;
-}
-.leader-1-larm {
-  position: relative;
-  width: 100px;
-  margin-left: -310px;
-  top: 50px;
-}
-.leader-1-rarm {
-  position: relative;
-  width: 100px;
-  margin-left: 170px;
-  top: 50px;
-  transform: rotate(-45deg);
-}
-.leader-1-lleg {
-  position: relative;
-  width: 100px;
-  margin-left: -175px;
-  top: 250px;
-  transform: rotate(-30deg);
-}
-.leader-1-rleg {
-  position: relative;
-  width: 100px;
-  margin-left: -250px;
-  top: 250px;
-  transform: rotate(-10deg);
+
+.leaderWrap{
+  width:80vh;
+  height: 100vh;
+  background-color: aqua;
 }
 
 
 
-.leader-2-head {
-  position: absolute;
-  margin-left: 200px;
-  width: 200px;
-  z-index: 5;
+.ctrlWrap{
+  width:80vh;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
-.leader-2-torso {
-  position: relative;
-  margin-left: 165px;
-  top: 150px;
-  width: 250px;
+
+.ctrlWrap h2{
+  text-align: center;
 }
-.leader-2-larm {
-  position: relative;
-  width: 50px;
-  margin-left: -250px;
-  top: 50px;
+
+.leadStats{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
-.leader-2-rarm {
-  position: relative;
-  width: 50px;
-  margin-left: 140px;
-  top: 50px;
+
+.btnList{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
-.leader-2-lleg {
-  position: relative;
-  width: 50px;
-  margin-left: -70px;
-  top: 225px;
-  transform: rotate(10deg);
+
+
+li {
+ list-style: none;
+ margin: 1vh;
+ text-align: center;
 }
-.leader-2-rleg {
-  position: relative;
-  width: 50px;
-  margin-left: -220px;
-  top: 225px;
+
+.btn{
+  width: 15vh;
+  height: 15vh;
+  background-color: brown;
+  box-shadow: 3px 5px rgb(93, 51, 27);
+  font-family: 'Permanent Marker', cursive;
+  color: white;
+  text-shadow: 2px 2px #ff0000;
+  border-radius: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn:hover{
+  background-color: rgb(165, 99, 42);
+  border-radius: 50%;
+}
+
+label{
+  font-family: 'Press Start 2P', cursive;
+  font-size: 10px;
+  color: white;
+  text-shadow: 2px 2px #ff0000;
+}
+
+
+.leadStats{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 10vh;
+}
+.stat{
+  width:20vh;
+  height: 10vh;
+  font-family: 'Permanent Marker', cursive;
+  font-size: 35px;
+  color: white;
+  text-shadow: 2px 2px #ff0000;
 }
