--- a/littleLeaders/styles.css
+++ b/littleLeaders/styles.css
@@ -1,8 +1,21 @@
 @import url('http://fonts.cdnfonts.com/css/serious-rounded');
 
+@import url(https://fonts.googleapis.com/css?family=Permanent+Marker|Press+Start+2P|Lato:300);
+
+
 body {
-    background-color: rgb(255, 224, 141);
+    background-color: rgb(255, 227, 186);
 }
+
+/* .cover {
+  background-color: rgb(255, 227, 186);
+  color:  rgb(255, 227, 186);
+  display: block;
+  position: absolute;
+  width: 99%;
+  height: 95%;
+  z-index: 10;
+} */
 
 .heading-main {
     margin: 25px;
@@ -43,19 +56,15 @@ body {
   to   { transform: translate(0, -0px); }    
 }
 
-.container {  
-  display: grid;
-
+.l1 {
+  margin-top: 10%;
+  margin-left: 25%;
 }
-
-.main-content {
-
-}
-
   
 .l2 {
-  margin-left: 850px;
-  margin-top: -325px;
+  margin-left: 30%;
+  margin-top: 2%;
+
 }
 
 
@@ -64,6 +73,7 @@ body {
   margin-left: 200px;
   width: 200px;
   z-index: 5;
+  
 }
 .leader-1-torso {
   position: relative;
@@ -76,6 +86,7 @@ body {
   width: 100px;
   margin-left: -310px;
   top: 50px;
+  transition-duration: .2s;
 }
 .leader-1-rarm {
   position: relative;
@@ -83,6 +94,7 @@ body {
   margin-left: 170px;
   top: 50px;
   transform: rotate(-45deg);
+  transition-duration: .2s;
 }
 .leader-1-lleg {
   position: relative;
@@ -90,6 +102,7 @@ body {
   margin-left: -175px;
   top: 250px;
   transform: rotate(-30deg);
+  transition-duration: .2s;
 }
 .leader-1-rleg {
   position: relative;
@@ -97,6 +110,7 @@ body {
   margin-left: -250px;
   top: 250px;
   transform: rotate(-10deg);
+  transition-duration: .2s;
 }
 
 
@@ -118,12 +132,14 @@ body {
   width: 50px;
   margin-left: -250px;
   top: 50px;
+  transition-duration: .2s;
 }
 .leader-2-rarm {
   position: relative;
   width: 50px;
   margin-left: 140px;
   top: 50px;
+  transition-duration: .2s;
 }
 .leader-2-lleg {
   position: relative;
@@ -131,10 +147,204 @@ body {
   margin-left: -70px;
   top: 225px;
   transform: rotate(10deg);
+  transition-duration: .2s;
 }
 .leader-2-rleg {
   position: relative;
   width: 50px;
   margin-left: -220px;
   top: 225px;
+  transition-duration: .2s;
+}
+
+.buttonThing {
+	position: relative;
+    color: rgba(255,255,255,1);
+    text-decoration: none;
+    background-color: rgb(219, 5, 5);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    font-size: 25px;
+    display: block;
+    padding: 4px;
+    border-radius: 8px;
+    box-shadow: 0px 9px 0px rgb(144, 17, 0), 0px 9px 25px rgba(0,0,0,.7);
+    margin-left: -115%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+	width: 160px;
+	text-align: center;
+	transition: all .1s ease;
+  cursor: pointer;
+}
+
+.buttonThing:active {
+    box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+    position: relative;
+    top: 6px;
+    cursor: pointer;
+}
+
+.buttonElon1 {
+	position: relative;
+    color: rgba(255,255,255,1);
+    text-decoration: none;
+    background-color: rgb(219, 5, 5);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    font-size: 25px;
+    display: block;
+    padding: 4px;
+    border-radius: 8px;
+    box-shadow: 0px 9px 0px rgb(144, 17, 0), 0px 9px 25px rgba(0,0,0,.7);
+    left: 1500px;
+    top: 500px;
+	width: 160px;
+	text-align: center;
+	transition: all .1s ease;
+  cursor: pointer;
+}
+
+.buttonElon1:active {
+    box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+    position: relative;
+    top: 6px;
+    cursor: pointer;
+}
+
+.buttonElon2 {
+	position: relative;
+    color: rgba(255,255,255,1);
+    text-decoration: none;
+    background-color: rgb(219, 5, 5);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    font-size: 25px;
+    display: block;
+    padding: 4px;
+    border-radius: 8px;
+    box-shadow: 0px 9px 0px rgb(144, 17, 0), 0px 9px 25px rgba(0,0,0,.7);
+    left: 1750px;
+    top: 460px;
+	width: 160px;
+	text-align: center;
+	transition: all .1s ease;
+  cursor: pointer;
+}
+
+.buttonElon2:active {
+    box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+    position: relative;
+    top: 6px;
+    cursor: pointer;
+}
+
+.buttonElon3 {
+	position: relative;
+    color: rgba(255,255,255,1);
+    text-decoration: none;
+    background-color: rgb(219, 5, 5);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    font-size: 25px;
+    display: block;
+    padding: 4px;
+    border-radius: 8px;
+    box-shadow: 0px 9px 0px rgb(144, 17, 0), 0px 9px 25px rgba(0,0,0,.7);
+    left: 2000px;
+    top: 420px;
+	width: 160px;
+	text-align: center;
+	transition: all .1s ease;
+  cursor: pointer;
+}
+
+.buttonElon3:active {
+    box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);
+    position: relative;
+    top: 6px;
+    cursor: pointer;
+}
+
+
+
+.container-key-1 {
+  position: absolute;
+  top: 75%;
+  left: 33%;
+  z-index: 10;
+}
+
+.container-key-2 {
+  position: absolute;
+  top: 75%;
+  left: 58.3%;
+  z-index: 10;
+}
+
+#key1 {
+    position: relative;
+    display: block;
+}
+
+#key2 {
+    position: relative;
+    display: block;
+
+}
+
+#charConfirm {
+  position: relative;
+  top: 500px;
+  left: 48%;
+}
+
+#statsNarc {
+  position: relative;
+  top: 500px;
+  left: 48%;
+  margin-right: 50%;
+  border: solid;
+
+}
+
+#statsInsec {
+  position: relative;
+  top: 500px;
+  left: 48%;
+  margin-right: 50%;
+  border: solid;
+
+}
+
+#statsControv {
+  position: relative;
+  top: 500px;
+  left: 48%;
+  margin-right: 50%;
+  border: solid;
+
+}
+
+#statsIntox {
+  position: relative;
+  top: 500px;
+  left: 48%;
+  margin-right: 50%;
+  border: solid;
+
+}
+
+#chosenChar {
+  display: flex;
+  justify-content: center;
+  border: solid;
+  margin-top: 5%;
+  margin-left: 5%;
+}
+
+.stats-container {
+  border: solid;
+  margin-top: -10%;
+  padding: 10px;
 }
